devops/istio/istio/4-canary-deployment/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test
  labels:
    app: test-api
    service: test-api
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: test-api
