devops/istio/istio/4-canary-deployment/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-api
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-api
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - test-api
  http:
  - route:
    - destination:
        host: test-api
        subset: stable
      weight: 50
    - destination:
        host: test-api
        subset: canary
      weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-api
  namespace: test
spec:
  host: test-api
  subsets:
  - name: stable
    labels:
      release: stable
  - name: canary
    labels:
      release: canary
